[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/objects/sunset-beach.jpg" type="Texture" id=1]
[ext_resource path="res://src/others/BeahcBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/End.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/objects/1background.jpg" type="Texture" id=4]
[ext_resource path="res://assets/sprites/objects/red-balloon-balloons-1VZoyv2-600_adobespark.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/title.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/sprites/objects/envelope.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "realese"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("BallonWithLetter:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BallonWithLetter:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 6 ),
"transitions": PoolRealArray( 1, 1, 38.0546 ),
"update": 0,
"values": [ Vector2( 976.425, 766.173 ), Vector2( 976.425, 431.195 ), Vector2( -96.2166, 456.14 ) ]
}

[sub_resource type="CapsuleShape2D" id=2]
radius = 54.646
height = 29.2063

[sub_resource type="RectangleShape2D" id=3]

[node name="End" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/realese = SubResource( 1 )

[node name="BeachBackground" parent="." instance=ExtResource( 2 )]

[node name="TextureRect" parent="BeachBackground" index="0"]
texture = ExtResource( 1 )

[node name="BallonWithLetter" type="Node2D" parent="."]
position = Vector2( 976.425, 766.173 )
scale = Vector2( 2, 2 )

[node name="Ballon" type="Area2D" parent="BallonWithLetter"]
position = Vector2( -6.79358, -4.07123 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallonWithLetter/Ballon"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="BallonWithLetter/Ballon"]
position = Vector2( -0.43637, 118.453 )
scale = Vector2( 0.613333, 0.733333 )
texture = ExtResource( 5 )

[node name="Letter" type="Area2D" parent="BallonWithLetter"]
position = Vector2( -2.34119, 108.143 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallonWithLetter/Letter"]
position = Vector2( 8.98975, 2.99658 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="BallonWithLetter/Letter"]
position = Vector2( 1.31488, 2.54495 )
scale = Vector2( 0.419266, 0.329431 )
texture = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="BallonWithLetter/Letter"]
modulate = Color( 1, 1, 1, 0.796078 )
margin_left = -53.0634
margin_top = -26.0095
margin_right = 56.9366
margin_bottom = 32.9905
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0117647, 0.0117647, 0.0117647, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 747.0
margin_top = 465.0
margin_right = 1168.0
margin_bottom = 651.0
custom_fonts/font = ExtResource( 6 )
button_mask = 7
text = "Soltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMenu" type="CanvasLayer" parent="."]
layer = -10

[node name="ColorRect" type="ColorRect" parent="EndMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="EndMenu"]
margin_left = 360.0
margin_top = 282.0
margin_right = 1551.0
margin_bottom = 873.0
mouse_filter = 2
color = Color( 0.454902, 0.45098, 0.45098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="EndMenu"]
margin_left = 806.618
margin_top = 425.677
margin_right = 1104.62
margin_bottom = 576.677
custom_fonts/font = ExtResource( 6 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="EndMenu"]
margin_left = 808.483
margin_top = 625.26
margin_right = 1106.48
margin_bottom = 776.26
custom_fonts/font = ExtResource( 6 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="tree_exited" from="BallonWithLetter" to="." method="_on_BallonWithLetter_tree_exited"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="EndMenu/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="EndMenu/Quit" to="." method="_on_Quit_pressed"]

[editable path="BeachBackground"]
